# Proyecto6_Grupo1

./: .gitignore  README.md  app.py  pyproject.toml
data/processed/: coffee_cleaned.csv  coffee_quality_clean.csv  coffee_quality_eda_clean_Jonathan.csv  coffee_quality_eda_fusion_clean_Jonathan.csv  coffee_quality_fusion.csv  coffee_quality_fusionado.csv
data/raw/: coffee_quality_fusionado.csv
doc/: decisiones_tecnicas_v2.md
models/: Arbol-Decision.ipynb  Model-RegressionLogistic.ipynb  model_Random_Forest.pkl  model_regression.pkl  scaler_Random_Forest.pkl
models/Camila/: X_test.pkl  X_train.pkl  encoders.pkl  feature_names.pkl  model.pkl  y_test.pkl  y_train.pkl
models/Jonathan/: X_test.pkl  X_train.pkl  encoders.pkl  feature_names.pkl  model.pkl  scaler_Random_Forest.pkl  y_test.pkl  y_train.pkl
models/Juanma/: X_test.pkl  X_train.pkl  feature_names.pkl  modelo.pkl  y_test.pkl  y_train.pkl
notebooks/: 01_EDA.ipynb  03_machine_learning.ipynb  0_Fusion_datasets.ipynb  0_Fusion_datasets_Jo.ipynb  1_EDA.ipynb  1_EDA_2023_Jonathan.ipynb  2_EDA_Merge_Jonathan.ipynb  3_preprocessing_modeling_Jonathan.ipynb  Comparativa_modelos.ipynb  EDA-Plantilla copy.ipynb  EDA-Plantilla.ipynb  EDA_Jonathan.ipynb  EDA_Plantilla_JJ_colab.ipynb
notebooks/Camila/: 02_preprocessing.ipynb  03_machine_learning.ipynb  04 Probar_Modelo.ipynb  0_Fusion_datasets.ipynb  1_EDA.ipynb
notebooks/JJ/: EDA_JJ.ipynb  EDA_JJ_colab_coffee_quality_fusionado_csv.ipynb  Proyecto6_Grupo1_repo_size.sh  Proyecto6_Grupo1_repo_structure.sh  repo_download_branches.sh
notebooks/Jonathan/: 1_EDA.ipynb  (+2 more)
(+10 files in other folders)
