[project]
name = "proyecto6-grupo1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "xgboost>=3.2.0",
]
